update template and homepage

--- a/template/partials/blogList.styl
+++ b/template/partials/blogList.styl
@@ -18,11 +18,10 @@
     position: relative
     &:hover p.link
       text-decoration: underline
-      color: var(--contrast)
+      color: var(--tertiary)
 
   .blogContent
     padding: 10px
-    background-color: rgba(fill, 0.9)
     border-radius: 10px
     width: 100%
 
@@ -42,7 +41,7 @@
     text-overflow: ellipsis
 
   .excerpt
-    color: var(--whiteDarken)
+    color: var(--light)
     margin-bottom :10px
 
   .date
