--- a/template/partials/header.pug
+++ b/template/partials/header.pug
@@ -2,8 +2,7 @@ header
   a(href=`${siteUrl}/`).homeTitle
     img(src=`${siteUrl}/images/clandrones.png`)
     span #{siteName}
-nav.navigation
-  ul
-    for uri, page in pages
-      li
-        a(href=`${uri}`) #{page}
+  .expansor &nbsp;
+  //- for uri, page in pages
+    a(href=`${uri}`)
+      span #{page.replace(/-/g, ' ')}
