--- a/template/styles.styl
+++ b/template/styles.styl
@@ -1,20 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap')
 
-primary = #F2994A
-secondary = #4EA9D0
-fill = #444654
-contrast = #e63946
-white = #fafafa
-
 :root
-  --primary: primary
-  --fill: fill
-  --fillWhiten: lighten(fill, 20%)
-  --fillDarken: darken(fill, 30%)
-  --white: white
-  --whiteDarken: darken(white, 30%)
-  --secondary: secondary
-  --contrast: contrast
+  --primary: #58A4B0
+  --secondary: #373F51
+  --tertiary: #A9BCD0
+  --foreground: #1B1B1E
+  --light: #D8DBE2
+  --background: #D8DBE2
 
 *:not(ul, ol, li)
   box-sizing: border-box
@@ -22,8 +14,8 @@ white = #fafafa
   padding: 0
 
 body
-  background-color: var(--fill)
-  color: var(--white)
+  background-color: var(--background)
+  color: var(--foreground)
   font-family: 'Roboto', sans-serif
   min-height: 100vh
   display: flex
@@ -31,9 +23,9 @@ body
 
 a
   text-decoration: none
-  color: var(--secondary)
+  color: var(--primary)
   &:hover
-    color: var(--contrast)
+    color: var(--tertiary)
 a, p.link
   transition: all 300ms linear
 
@@ -41,6 +33,11 @@ header
   position: relative
   border-bottom: 1px solid var(--secondary)
   background-color: #000
+  display: flex
+  align-items: center
+  justify-content: space-between
+  height: 150px
+  padding: 20px
   &:before
     position: absolute
     content: ""
@@ -51,47 +48,22 @@ header
     background: url($siteUrl + "/images/header.jpg") no-repeat center
     background-size: cover
     opacity: 0.3
-  .homeTitle
+  .expansor
+    flex-grow: 1
+  a
     position: relative
     display: flex
-    flex-direction: column
     align-items: center
-    justify-content: center
-    height: 150px
     img
-      width: 50px
-      height: 50px
-      margin-bottom: 5px
+      width: 120px
+      height: 120px
     span
+      font-size: 1.2em
+      margin-left: 20px
+    &.homeTitle span
       font-size: 2em
       font-weight: 700
       letter-spacing: 1px
-
-nav.navigation
-  position: -webkit-sticky
-  position: sticky
-  top: 0
-  height: 60px
-  ul, li 
-    margin: 0
-    padding: 0
-  ul
-    list-style: none
-    display: flex
-    align-items: flex-start
-    justify-content: center
-  a
-    display: inline-block
-    padding: 10px 0
-    margin: 0 6px
-    background-color: var(--contrast)
-    min-width: 100px
-    text-align: center
-    color: var(--white)
-    border-bottom-left-radius: 6px
-    border-bottom-right-radius: 6px
-    &:hover
-      padding-top: 20px
 
 footer
   border-top: 1px solid var(--secondary)
@@ -100,14 +72,12 @@ footer
   margin-top: auto
 
 h1
-  color: var(--primary)
-h2
   color: var(--secondary)
+h2
+  color: var(--foreground)
 
 .content, .xml
-  max-width: 1200px
-  margin: 0 auto 20px auto
-  padding: 0 20px
+  margin: 20px
   display: flex
   flex-direction: column
   .navigator
@@ -124,11 +94,11 @@ h2
     display: block
     margin: auto
   h2
-    border-bottom: 2px solid var(--fillDarken)
+    border-bottom: 2px solid var(--secondary)
   p
     line-height: 1.3em
   p > code
-    background-color var(--fillWhiten)
+    background-color var(--light)
     padding: 2px 4px
     border-radius: 4px
   blockquote
@@ -145,7 +115,7 @@ h2
       background-color: var(--primary)
   pre
     width: 100%
-    background-color: var(--fillDarken)
+    background-color: var(--secondary)
     padding: 10px
     margin: 0 auto
     border-radius: 6px
@@ -158,7 +128,7 @@ h2
   .postTags
     a
       --tagBg: var(--secondary)
-      --tagFg: var(--white)
+      --tagFg: var(--light)
       position: relative
       background-color: var(--tagBg)
       display: inline-block
