--- a/template/partials/blogList.pug
+++ b/template/partials/blogList.pug
@@ -1,16 +1,13 @@
 .blogList
-  each post in posts
+  each post in posts.filter(post => post.meta.tags.includes('miembro'))
     - var date = post.meta.date
     - var options = { year: 'numeric', month: 'short', day: 'numeric' }
     .card(
-      style=`background-image: url(${siteUrl}/${post.meta.image})`,
+      style=`background-image: url(${siteUrl}${post.meta.image})`,
       class=`${(post.meta.tags || []).join(' ')}`
     )
       .blogContent
         h3.title
           p.postTitle #{post.meta.title}
         p.excerpt #{post.meta.excerpt}
-        .cta
-          p.author by #{post.meta.author}
-          p.link Read more
       a(href=`${siteUrl}/posts/${post.path}`).megaLink
