--- a/template/partials/blogList.styl
+++ b/template/partials/blogList.styl
@@ -13,6 +13,7 @@
     border-radius: 10px
     background-size: cover
     background-position: center
+    background-position: top center
     display: flex
     align-items: flex-end
     position: relative
@@ -24,6 +25,7 @@
     padding: 10px
     border-radius: 10px
     width: 100%
+    background-color: rgba(0, 0, 0, 0.7)
 
   .author
     font-size: 14px
@@ -39,6 +41,7 @@
     white-space: nowrap
     overflow: hidden
     text-overflow: ellipsis
+    color: var(--light)
 
   .excerpt
     color: var(--light)
@@ -48,11 +51,6 @@
     font-size: 12px
     color: var(--primary)
     text-align: right
-
-  p.link
-    text-decoration: none
-    font-weight: bold
-    color: var(--secondary)
 
   a.megaLink
     position: absolute
