--- a/template/post.pug
+++ b/template/post.pug
@@ -10,10 +10,10 @@ body
         for tag in tags
           a(href=`${siteUrl}/posts?tag=${tag}`) !{tag}
 
-    include plugins/comments.pug
+    //- include plugins/comments.pug
 
-    h2 Other entries
-    .navigator
+    //- h2 Other entries
+    //- .navigator
       if next.path
         a(href=`${siteUrl}/posts/${next.path}`) &laquo; #{next.title}
       else
