--- a/template/styles.styl
+++ b/template/styles.styl
@@ -76,8 +76,19 @@ h1
 h2
   color: var(--foreground)
 
-.content, .xml
+.container
+  display: grid
+  grid-template-columns: 1fr 250px
+  grid-gap: 20px
+
+@media (max-width: 800px)
+  .container
+    grid-template-columns: 1fr
+
+.container, .xml
   margin: 20px
+
+.content, .xml
   display: flex
   flex-direction: column
   .navigator
@@ -125,30 +136,5 @@ h2
     code
       font-size: 1.1em
       max-width: 10px
-  .postTags
-    a
-      --tagBg: var(--secondary)
-      --tagFg: var(--light)
-      position: relative
-      background-color: var(--tagBg)
-      display: inline-block
-      padding: 2px 10px
-      margin: 0 7px
-      border-radius: 5px
-      color: var(--tagFg)
-      &:before
-        content: ""
-        position: absolute
-        top: -2px
-        left: 3px
-        height: 19px
-        width: 19px
-        transform-origin: top left
-        transform: rotate(45deg)
-        background: var(--tagBg)
-        border-radius: 5px
-        z-index: -1
-  tag#tag
-    color var(--secondary)
 
 @import "blogList.styl"
