change styles, add section about us

--- a/template/partials/header.pug
+++ b/template/partials/header.pug
@@ -1,5 +1,5 @@
 header
   a(href=`${siteUrl}/`).homeTitle
     img(src=`${siteUrl}/images/clandrones.png`)
-    span #{siteName}
+    span Clan Drones
   .expansor &nbsp;
