--- a/template/post.pug
+++ b/template/post.pug
@@ -3,25 +3,19 @@ head
 
 body
   include partials/header.pug
-  .content
-    |!{pageData}
-    .postTags
-      if tags
-        for tag in tags
-          a(href=`${siteUrl}/posts?tag=${tag}`) !{tag}
-
+  .container
+    .content
+      .postLayout
+        .post
+          |!{pageData}
+        img(src=`${siteUrl}${image}`, alt=title)
+      //- .postTags
+        if tags
+          for tag in tags
+            a(href=`${siteUrl}/posts?tag=${tag}`) !{tag}
     //- include plugins/comments.pug
-
-    //- h2 Other entries
-    //- .navigator
-      if next.path
-        a(href=`${siteUrl}/posts/${next.path}`) &laquo; #{next.title}
-      else
-        span
-
-      if prev.path
-        a(href=`${siteUrl}/posts/${prev.path}`) #{prev.title} &raquo;
-      else
-        span
+    .sidebar
+      h2 Secciones
+      include partials/sidebar.pug
 
   include partials/footer.pug
