--- a/template/partials/headMeta.pug
+++ b/template/partials/headMeta.pug
@@ -1,4 +1,4 @@
-title #{siteName}
+title Clan Drones
 //- Required to render latin characters the right way
 meta(charset="UTF-8")
 
@@ -12,7 +12,7 @@ meta(property="og:image", content=`${siteUrl}/images/header.jpg`)
 meta(name="twitter:card", content="summary_large_image")
 meta(property="twitter:domain", content=`${siteUrl}`)
 meta(property="twitter:url", content=`${siteUrl}`)
-meta(name="twitter:title", content=`${siteName}`)
+meta(name="twitter:title", content="Clan Drones")
 meta(name="twitter:description", content=`${siteDesc}`)
 meta(name="twitter:image", content=`${siteUrl}/images/header.jpg`)
 
