--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,42 @@ h1 {
 h2 {
   color: var(--foreground);
 }
-.content,
+.container {
+  display: grid;
+  grid-template-columns: 1fr 250px;
+  grid-gap: 20px;
+}
+@media (max-width: 800px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+.container,
 .xml {
   margin: 20px;
+}
+.content .postLayout {
+  display: flex;
+  justify-content: space-between;
+}
+.content .postLayout img {
+  max-width: 50%;
+}
+.content .postLayout .post {
+  flex-grow: 1;
+  margin-right: 20px;
+  text-align: right;
+}
+.sidebar {
+  border-left: 1px solid var(--secondary);
+  padding-left: 20px;
+}
+.sidebar .item {
+  display: block;
+  padding: 5px 0;
+}
+.content,
+.xml {
   display: flex;
   flex-direction: column;
 }
@@ -115,10 +148,6 @@ h2 {
   border-radius: 10px;
   display: block;
   margin: auto;
-}
-.content h2,
-.xml h2 {
-  border-bottom: 2px solid var(--secondary);
 }
 .content p,
 .xml p {
@@ -162,36 +191,6 @@ h2 {
   font-size: 1.1em;
   max-width: 10px;
 }
-.content .postTags a,
-.xml .postTags a {
-  --tagBg: var(--secondary);
-  --tagFg: var(--light);
-  position: relative;
-  background-color: var(--tagBg);
-  display: inline-block;
-  padding: 2px 10px;
-  margin: 0 7px;
-  border-radius: 5px;
-  color: var(--tagFg);
-}
-.content .postTags a:before,
-.xml .postTags a:before {
-  content: "";
-  position: absolute;
-  top: -2px;
-  left: 3px;
-  height: 19px;
-  width: 19px;
-  transform-origin: top left;
-  transform: rotate(45deg);
-  background: var(--tagBg);
-  border-radius: 5px;
-  z-index: -1;
-}
-.content tag#tag,
-.xml tag#tag {
-  color: var(--secondary);
-}
 .blogList {
   display: flex;
   flex-wrap: wrap;
@@ -207,6 +206,7 @@ h2 {
   border-radius: 10px;
   background-size: cover;
   background-position: center;
+  background-position: top center;
   display: flex;
   align-items: flex-end;
   position: relative;
@@ -219,6 +219,7 @@ h2 {
   padding: 10px;
   border-radius: 10px;
   width: 100%;
+  background-color: rgba(0,0,0,0.7);
 }
 .blogList .author {
   font-size: 14px;
@@ -235,6 +236,7 @@ h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: var(--light);
 }
 .blogList .excerpt {
   color: var(--light);
@@ -244,11 +246,6 @@ h2 {
   font-size: 12px;
   color: var(--primary);
   text-align: right;
-}
-.blogList p.link {
-  text-decoration: none;
-  font-weight: bold;
-  color: var(--secondary);
 }
 .blogList a.megaLink {
   position: absolute;
