--- a/template/styles.styl
+++ b/template/styles.styl
@@ -5,6 +5,7 @@
   --secondary: #373F51
   --tertiary: #A9BCD0
   --foreground: #1B1B1E
+  --contrast: #c49044
   --light: #D8DBE2
   --background: #D8DBE2
 
