sweep unneeded files, fix og:image and hardcoded title

--- a/template/partials/headMeta.pug
+++ b/template/partials/headMeta.pug
@@ -8,13 +8,13 @@ meta(property="og:url", content=`${siteUrl}`)
 meta(property="og:type", content="website")
 meta(property="og:title", content=`${siteName}`)
 meta(property="og:description", content=`${siteDesc}`)
-meta(property="og:image", content=`${siteUrl}/images/header.jpg`)
+meta(property="og:image", content=`${siteUrl}/images/clan-drones.jpg`)
 meta(name="twitter:card", content="summary_large_image")
 meta(property="twitter:domain", content=`${siteUrl}`)
 meta(property="twitter:url", content=`${siteUrl}`)
-meta(name="twitter:title", content="Clan Drones")
+meta(name="twitter:title", content=`${siteName}`)
 meta(name="twitter:description", content=`${siteDesc}`)
-meta(name="twitter:image", content=`${siteUrl}/images/header.jpg`)
+meta(name="twitter:image", content=`${siteUrl}/images/clan-drones.jpg`)
 
 //- Favicons for all devices. Remember to add your favicons to template/favicons/
 link(rel="apple-touch-icon" sizes="180x180" href=`${siteUrl}/apple-touch-icon.png`)
